; ModuleID = '/home/carl/AnghaBench/Cinder/src/freetype/pshinter/extr_pshalgo.c_psh_compute_dir.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/freetype/pshinter/extr_pshalgo.c_psh_compute_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PSH_DIR_NONE = common dso_local global i32 0, align 4
@PSH_DIR_RIGHT = common dso_local global i32 0, align 4
@PSH_DIR_LEFT = common dso_local global i32 0, align 4
@PSH_DIR_UP = common dso_local global i32 0, align 4
@PSH_DIR_DOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @psh_compute_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @psh_compute_dir(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @PSH_DIR_NONE, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @FT_ABS(i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @FT_ABS(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = mul nsw i32 %13, 12
  %15 = load i32, i32* %5, align 4
  %16 = icmp slt i32 %14, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %2
  %18 = load i32, i32* %3, align 4
  %19 = icmp sge i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i32, i32* @PSH_DIR_RIGHT, align 4
  br label %24

22:                                               ; preds = %17
  %23 = load i32, i32* @PSH_DIR_LEFT, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = phi i32 [ %21, %20 ], [ %23, %22 ]
  store i32 %25, i32* %7, align 4
  br label %41

26:                                               ; preds = %2
  %27 = load i32, i32* %5, align 4
  %28 = mul nsw i32 %27, 12
  %29 = load i32, i32* %6, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %40

31:                                               ; preds = %26
  %32 = load i32, i32* %4, align 4
  %33 = icmp sge i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %31
  %35 = load i32, i32* @PSH_DIR_UP, align 4
  br label %38

36:                                               ; preds = %31
  %37 = load i32, i32* @PSH_DIR_DOWN, align 4
  br label %38

38:                                               ; preds = %36, %34
  %39 = phi i32 [ %35, %34 ], [ %37, %36 ]
  store i32 %39, i32* %7, align 4
  br label %40

40:                                               ; preds = %38, %26
  br label %41

41:                                               ; preds = %40, %24
  %42 = load i32, i32* %7, align 4
  ret i32 %42
}

declare dso_local i32 @FT_ABS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
